[package]
name = "bsplines"
version = "0.0.1-alpha.0"
authors = [
    "Michael A. Heuer <decentralised.systems@gmail.com>",
]
description = "N-dimensional B-spline curves and their derivatives built on top of nalgebra"
keywords = ["b-spline", "spline", "curve", "derivatives", "nalgebra"]
categories = [
    "mathematics",
    "algorithms",
    "graphics",
    "no-std",
]
homepage = "https://github.com/michael-a-heuer/bsplines"
repository = "https://github.com/michael-a-heuer/bsplines"
readme = "README.md"
documentation = "https://crates.io/crates/bsplines"

edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bsplines"
path = "src/lib.rs"

[[example]]
name = "doc-images"
path = "doc-images/src/main.rs"

[lints.rust]
unsafe_code = "forbid"
non_snake_case = "allow"
dead_code = "allow"

[lints.clippy]
enum_glob_use = "deny"
type_complexity = "allow"

[dependencies]
embed-doc-image = "0.1.4"
nalgebra = "0.32.3"
thiserror = "1.0.56"


[dev-dependencies]
rstest = "0.18.2"
approx = "0.5.1"
plotters = "0.3.5"
plotters-arrows = "0.1.0"
num-traits = "0.2.17"

[features]
doc-images = []

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "./src/docs-header.html",
]
