[package]
name = "bsplines"
license = "Apache-2.0"
version = "0.0.1-alpha.9"
authors = [
    "Michael A. Heuer <decentralised.systems@gmail.com>",
]
edition = "2021"
description = "N-dimensional B-spline curves and their derivatives built on top of nalgebra"
keywords = ["b-spline", "spline", "curve", "derivatives", "nalgebra"]
categories = [
    "mathematics",
    "algorithms",
    "graphics",
    "no-std",
]

readme = "README.md"
homepage = "https://github.com/michael-a-heuer/bsplines"
repository = "https://github.com/michael-a-heuer/bsplines"
documentation = "https://docs.rs/bsplines"

[package.metadata.docs.rs]
features = ["doc-images"]

[features]
doc-images = []

[lib]
name = "bsplines"
path = "src/lib.rs"

[[example]]
name = "doc-images"
path = "doc-images/src/main.rs"

[lints.rust]
unsafe_code = "forbid"
non_snake_case = "allow"
dead_code = "allow"

[lints.clippy]
enum_glob_use = "deny"
type_complexity = "allow"

[dependencies]
embed-doc-image = "0.1.4"
nalgebra = "0.32.3"
thiserror = "1.0.56"


[dev-dependencies]
rstest = "0.18.2"
approx = "0.5.1"
plotters = "0.3.5"
plotters-arrows = "0.1.0"
num-traits = "0.2.17"
